[package]
name = "halo2-mpt-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.11"
halo2 = { git = "https://github.com/appliedzkp/halo2.git", rev = "b78c39cacc1c79d287032f1b5f94beb661b3fb42", features = ["dev-graph"] }
hex = "0.4"
lazy_static = "1.4.0"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
plotters = "0.3"
poseidon-rs = "0.0.8"
pretty_env_logger = "0.4"
rand_chacha = "0.3.0"
